# metainvenio

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MAINTAINERS  MANIFEST.in  README.rst  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: tests.yml
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  usage.rst
metainvenio/: __init__.py  config.py  github.py  pypi.py  travis.py  version.py
metainvenio/cli/: __init__.py  conf.py  github.py  main.py  pypi.py  travis.py
tests/: conftest.py  repositories.yml  tests_config.py
