# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2017-2023 CERN.
#
# Invenio is free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# Invenio is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Invenio; if not, write to the
# Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
# MA 02111-1307, USA.
#
# In applying this license, CERN does not
# waive the privileges and immunities granted to it by virtue of its status
# as an Intergovernmental Organization or submit itself to any jurisdiction.

[metadata]
name = metainvenio
version = attr: metainvenio.__version__
description = CLI management tool for Invenio projects
long_description = file: README.rst, CHANGES.rst
keywords = project management tools
license = GPLv2
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/metainvenio
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    attrdict>=2.0.0
    click>=6.0.0
    github3.py>1.0.0,<2.0.0
    pyaml>=16.12.2
    PyYAML>=3.12

[options.extras_require]
tests =
    check-manifest>=0.42
    coverage>=5.3,<6
    pytest-black>=0.3.0
    pytest-cov>=3.0.0
    pytest-isort>=3.0.0
    pytest-pycodestyle>=2.2.0
    pytest>=6,<7.2.0
    sphinx>=5

[options.entry_points]
console_scripts =
    metainvenio = metainvenio.cli:cli

[bdist_wheel]
universal = 1

[isort]
profile=black

[tool:pytest]
addopts = --black --isort --cov=metainvenio --cov-report=term-missing
testpaths = tests metainvenio
filterwarnings = ignore::pytest.PytestDeprecationWarning
